--- a/REIP_front/css/landing-page.css
+++ b/REIP_front/css/landing-page.css
@@ -21,10 +21,10 @@ h6 {
 header.masthead {
   position: relative;
   background-color: #343a40;
-  background: url("../img/bg-masthead.jpg") no-repeat center center;
+  background: url("../images/smilingman.jpg") no-repeat;
   background-size: cover;
-  padding-top: 8rem;
-  padding-bottom: 8rem;
+  padding-top: 0rem;
+  padding-bottom: 0rem;
 }
 
 header.masthead .overlay {
@@ -38,7 +38,7 @@ header.masthead .overlay {
 }
 
 header.masthead h1 {
-  font-size: 2rem;
+  font-size: 3rem;
 }
 
 @media (min-width: 768px) {
